[gd_scene load_steps=20 format=3 uid="uid://vh5m0r3xogr1"]

[ext_resource type="Script" path="res://Scripts/MainMenu.gd" id="1_hn4jk"]
[ext_resource type="PackedScene" uid="uid://bbptuv1do4fe" path="res://Menus/SettingsMenu.tscn" id="2_5eyd3"]
[ext_resource type="FontFile" uid="uid://41y7qinwa7cl" path="res://Assets/Fonts/Asimovian-Regular.ttf" id="2_pcltc"]
[ext_resource type="PackedScene" uid="uid://cqbiktwssofkk" path="res://Assets/Greyboxing/Offices/EmptyOfficeGreybox.tscn" id="4_yc7rf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xva8m"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wc08n"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ogt36"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_urixd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dw7fr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_repn0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_p22on"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4aa3f"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qt4op"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jpmis"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8magn"]

[sub_resource type="Animation" id="Animation_50vmk"]
resource_name = "FadeIn"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MainMenuFirstScreen/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MainMenuFirstScreen/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_i7tmh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BackGround/SubViewportContainer/SubViewport/Camera3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.506871, 3.43768, 11.0719)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MainMenuFirstScreen/ColorRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MainMenuFirstScreen/ColorRect:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_fwqbr"]
resource_name = "camera_anim"
length = 5.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BackGround/SubViewportContainer/SubViewport/Camera3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.06667, 2.03333, 3.03333, 4, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(-2.78358, 3.49605, 11.0719), Vector3(-2.78358, 3.49605, 10.1346), Vector3(-2.78358, 4.85656, 9.70558), Vector3(-2.78358, 5.16002, 11.6266), Vector3(-3.73254, 3.49605, 11.0719), Vector3(-2.78358, 3.49605, 11.0719)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4lbyd"]
_data = {
"FadeIn": SubResource("Animation_50vmk"),
"RESET": SubResource("Animation_i7tmh"),
"camera_anim": SubResource("Animation_fwqbr")
}

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_hn4jk")

[node name="BackGround" type="Node3D" parent="."]

[node name="SubViewportContainer" type="SubViewportContainer" parent="BackGround"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport" type="SubViewport" parent="BackGround/SubViewportContainer"]
handle_input_locally = false
msaa_3d = 3
use_taa = true
use_debanding = true
size = Vector2i(1280, 720)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="BackGround/SubViewportContainer/SubViewport"]
transform = Transform3D(-0.173648, -0.292382, 0.940404, 0, 0.954911, 0.296892, -0.984808, 0.0515548, -0.165818, 0.506871, 3.43768, 11.0719)

[node name="MainMenuFirstScreen" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MainMenuFirstScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 80

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenuFirstScreen/MarginContainer"]
layout_mode = 2

[node name="GameTitle" type="Label" parent="MainMenuFirstScreen/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0.537255, 0.0156863, 0.0156863, 1)
theme_override_fonts/font = ExtResource("2_pcltc")
theme_override_font_sizes/font_size = 62
text = "NO EXIT
"

[node name="MarginContainer" type="MarginContainer" parent="MainMenuFirstScreen/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 60

[node name="StartBtn" type="Button" parent="MainMenuFirstScreen/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_hover_color = Color(0.517647, 0.458824, 0.458824, 1)
theme_override_colors/font_pressed_color = Color(0.537255, 0.0156863, 0.0156863, 1)
theme_override_fonts/font = ExtResource("2_pcltc")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_xva8m")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_wc08n")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ogt36")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_urixd")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_dw7fr")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_repn0")
theme_override_styles/hover = SubResource("StyleBoxEmpty_p22on")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_4aa3f")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_qt4op")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_jpmis")
theme_override_styles/normal = SubResource("StyleBoxEmpty_8magn")
text = "Loop Select"

[node name="SettingsBtn" type="Button" parent="MainMenuFirstScreen/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_hover_color = Color(0.517647, 0.458824, 0.458824, 1)
theme_override_colors/font_pressed_color = Color(0.537255, 0.0156863, 0.0156863, 1)
theme_override_fonts/font = ExtResource("2_pcltc")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_xva8m")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_wc08n")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ogt36")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_urixd")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_dw7fr")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_repn0")
theme_override_styles/hover = SubResource("StyleBoxEmpty_p22on")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_4aa3f")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_qt4op")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_jpmis")
theme_override_styles/normal = SubResource("StyleBoxEmpty_8magn")
text = "Settings"

[node name="QuitBtn" type="Button" parent="MainMenuFirstScreen/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_hover_color = Color(0.517647, 0.458824, 0.458824, 1)
theme_override_colors/font_pressed_color = Color(0.537255, 0.0156863, 0.0156863, 1)
theme_override_fonts/font = ExtResource("2_pcltc")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_xva8m")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_wc08n")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ogt36")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_urixd")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_dw7fr")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_repn0")
theme_override_styles/hover = SubResource("StyleBoxEmpty_p22on")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_4aa3f")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_qt4op")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_jpmis")
theme_override_styles/normal = SubResource("StyleBoxEmpty_8magn")
text = "Quit
"

[node name="ColorRect" type="ColorRect" parent="MainMenuFirstScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.101961, 0.0941176, 0.0745098, 1)

[node name="MainMenuFirstScreen2" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MainMenuFirstScreen2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 80

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenuFirstScreen2/MarginContainer"]
layout_mode = 2

[node name="GameTitle" type="Label" parent="MainMenuFirstScreen2/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0.537255, 0.0156863, 0.0156863, 1)
theme_override_fonts/font = ExtResource("2_pcltc")
theme_override_font_sizes/font_size = 62
text = "NO EXIT
"

[node name="MarginContainer" type="MarginContainer" parent="MainMenuFirstScreen2/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 60

[node name="PrevScreenBtn" type="Button" parent="MainMenuFirstScreen2/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_hover_color = Color(0.517647, 0.458824, 0.458824, 1)
theme_override_colors/font_pressed_color = Color(0.537255, 0.0156863, 0.0156863, 1)
theme_override_fonts/font = ExtResource("2_pcltc")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_xva8m")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_wc08n")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ogt36")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_urixd")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_dw7fr")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_repn0")
theme_override_styles/hover = SubResource("StyleBoxEmpty_p22on")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_4aa3f")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_qt4op")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_jpmis")
theme_override_styles/normal = SubResource("StyleBoxEmpty_8magn")
text = "< Previous Screen"

[node name="MarginContainer2" type="MarginContainer" parent="MainMenuFirstScreen2/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 20

[node name="Loop1Btn" type="Button" parent="MainMenuFirstScreen2/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_hover_color = Color(0.517647, 0.458824, 0.458824, 1)
theme_override_colors/font_pressed_color = Color(0.537255, 0.0156863, 0.0156863, 1)
theme_override_fonts/font = ExtResource("2_pcltc")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_xva8m")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_wc08n")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ogt36")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_urixd")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_dw7fr")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_repn0")
theme_override_styles/hover = SubResource("StyleBoxEmpty_p22on")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_4aa3f")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_qt4op")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_jpmis")
theme_override_styles/normal = SubResource("StyleBoxEmpty_8magn")
text = "Loop 1"

[node name="GreyBoxingBtn" type="Button" parent="MainMenuFirstScreen2/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_hover_color = Color(0.517647, 0.458824, 0.458824, 1)
theme_override_colors/font_pressed_color = Color(0.537255, 0.0156863, 0.0156863, 1)
theme_override_fonts/font = ExtResource("2_pcltc")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_xva8m")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_wc08n")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ogt36")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_urixd")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_dw7fr")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_repn0")
theme_override_styles/hover = SubResource("StyleBoxEmpty_p22on")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_4aa3f")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_qt4op")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_jpmis")
theme_override_styles/normal = SubResource("StyleBoxEmpty_8magn")
text = "GreyBoxing Demos"

[node name="MainBtn" type="Button" parent="MainMenuFirstScreen2/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_hover_color = Color(0.517647, 0.458824, 0.458824, 1)
theme_override_colors/font_pressed_color = Color(0.537255, 0.0156863, 0.0156863, 1)
theme_override_fonts/font = ExtResource("2_pcltc")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_xva8m")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_wc08n")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ogt36")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_urixd")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_dw7fr")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_repn0")
theme_override_styles/hover = SubResource("StyleBoxEmpty_p22on")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_4aa3f")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_qt4op")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_jpmis")
theme_override_styles/normal = SubResource("StyleBoxEmpty_8magn")
text = "Main
"

[node name="ParkingKeysL1" type="Button" parent="MainMenuFirstScreen2/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_hover_color = Color(0.517647, 0.458824, 0.458824, 1)
theme_override_colors/font_pressed_color = Color(0.537255, 0.0156863, 0.0156863, 1)
theme_override_fonts/font = ExtResource("2_pcltc")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_xva8m")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_wc08n")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ogt36")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_urixd")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_dw7fr")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_repn0")
theme_override_styles/hover = SubResource("StyleBoxEmpty_p22on")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_4aa3f")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_qt4op")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_jpmis")
theme_override_styles/normal = SubResource("StyleBoxEmpty_8magn")
text = "Parking Garage Keys L1"

[node name="ParkingL1" type="Button" parent="MainMenuFirstScreen2/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_hover_color = Color(0.517647, 0.458824, 0.458824, 1)
theme_override_colors/font_pressed_color = Color(0.537255, 0.0156863, 0.0156863, 1)
theme_override_fonts/font = ExtResource("2_pcltc")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_xva8m")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_wc08n")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ogt36")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_urixd")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_dw7fr")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_repn0")
theme_override_styles/hover = SubResource("StyleBoxEmpty_p22on")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_4aa3f")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_qt4op")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_jpmis")
theme_override_styles/normal = SubResource("StyleBoxEmpty_8magn")
text = "Parking Garage L1"

[node name="AlternateParking" type="Button" parent="MainMenuFirstScreen2/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_hover_color = Color(0.517647, 0.458824, 0.458824, 1)
theme_override_colors/font_pressed_color = Color(0.537255, 0.0156863, 0.0156863, 1)
theme_override_fonts/font = ExtResource("2_pcltc")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_xva8m")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_wc08n")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ogt36")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_urixd")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_dw7fr")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_repn0")
theme_override_styles/hover = SubResource("StyleBoxEmpty_p22on")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_4aa3f")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_qt4op")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_jpmis")
theme_override_styles/normal = SubResource("StyleBoxEmpty_8magn")
text = "Alternate Parking Garage L1"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4lbyd")
}
autoplay = "camera_anim"
speed_scale = 0.2

[node name="SettingsMenu" parent="." instance=ExtResource("2_5eyd3")]
visible = false

[node name="EmptyOfficeGreybox" parent="." instance=ExtResource("4_yc7rf")]
transform = Transform3D(0.16, 0, 0, 0, 0.16, 0, 0, 0, 0.16, -11.8669, -10.1064, -11.9154)

[connection signal="pressed" from="MainMenuFirstScreen/MarginContainer/VBoxContainer/StartBtn" to="." method="_on_start_btn_pressed"]
[connection signal="pressed" from="MainMenuFirstScreen/MarginContainer/VBoxContainer/SettingsBtn" to="." method="_on_settings_btn_pressed"]
[connection signal="pressed" from="MainMenuFirstScreen/MarginContainer/VBoxContainer/QuitBtn" to="." method="_on_quit_btn_pressed"]
[connection signal="pressed" from="MainMenuFirstScreen2/MarginContainer/VBoxContainer/PrevScreenBtn" to="." method="_on_prev_screen_btn_pressed"]
[connection signal="pressed" from="MainMenuFirstScreen2/MarginContainer/VBoxContainer/Loop1Btn" to="." method="_on_loop_1_btn_pressed"]
[connection signal="pressed" from="MainMenuFirstScreen2/MarginContainer/VBoxContainer/GreyBoxingBtn" to="." method="_on_grey_boxing_btn_pressed"]
[connection signal="pressed" from="MainMenuFirstScreen2/MarginContainer/VBoxContainer/MainBtn" to="." method="_on_main_btn_pressed"]
[connection signal="pressed" from="MainMenuFirstScreen2/MarginContainer/VBoxContainer/ParkingKeysL1" to="." method="_on_parking_keys_l_1_pressed"]
[connection signal="pressed" from="MainMenuFirstScreen2/MarginContainer/VBoxContainer/ParkingL1" to="." method="_on_parking_l_1_pressed"]
[connection signal="pressed" from="MainMenuFirstScreen2/MarginContainer/VBoxContainer/AlternateParking" to="." method="_on_alternate_parking_pressed"]
